--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1273,7 +1273,7 @@ div#myDropdown {
     text-align: -webkit-center;
 }
 .order-conts {
-    border: solid 1px;
+    /*border: solid 1px;*/
     width: 921px;
     height: auto;
     /* align-content: flex-end; */
@@ -1281,7 +1281,33 @@ div#myDropdown {
     line-height: 38px;
     padding: 37px;
     margin: 66px 0;
+    /*box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);*/
+    -webkit-box-shadow: 0px 0px 6px -1px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 0px 6px -1px rgba(0,0,0,0.75);
+    box-shadow: 0px 0px 6px -1px rgba(0,0,0,0.75);
+    border-radius: 4px;
+    background-color: #fcfcfc;
 }
 .date-time {
     display: flex;
+}
+.datestime {
+    height: 46px;
+    padding: 6px;
+    border: none;
+    background-color: #efefef;
+}
+.inpt-address {
+  height: 30px;
+}
+.asterisk {
+  color: red;
+}
+.proceed-to button {
+    height: 29px;
+    width: 124px;
+    border: 2px solid #b89352;
+}
+.proceed-to span {
+  margin-left: 13px;
 }
