--- a/public/sass/bodystyle.css
+++ b/public/sass/bodystyle.css
@@ -19,7 +19,10 @@
 }
 
 .container {
-  /*position: relative;*/
+  position: relative;
+  /*text-align: center;*/
+  /*color: #ffffffbf;*/
+  max-width: 1920px;
 }
 
 .f-icon img {
@@ -161,8 +164,9 @@ a#cancel_reset {
 
 .shop-img img {
   width: 100%;
-   object-fit: cover;
-  height: 22.25rem;
+  -o-object-fit: cover;
+     object-fit: cover;
+  height: 31.25rem;
   -webkit-filter: brightness(0.5);
           filter: brightness(0.5);
 }
@@ -222,7 +226,7 @@ i.fa.fa-star {
   width: 100%;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
-  justify-content: space-evenly;
+          justify-content: center;
 }
 
 .shop-sorting a {
@@ -415,7 +419,7 @@ i.fa.fa-star {
   text-align: center;
   padding: 34px 0;
   font-size: 25px;
-  height: auto;
+  height: 50px;
 }
 
 .paginate span {
@@ -487,112 +491,7 @@ button.addcart {
   display: flex;
 }
 
-@media screen and (max-width: 768px){
-    span.close-btn {
-      display: block;
-    }
-    .shop-conts {
-      display: none;
-      border: solid #c4a256;
-    }
-    .showing {
-      display: block;
-      position: fixed;
-      background: #fff;
-      z-index: 100;
-      top: 0;
-      right: 0;
-      width: 29.4375rem;
-      transition: 2s;
-    }
-    .shop-sub-container3 {
-      width: 100%;
-      padding: 31px 32px;
-    }
-    .shop-anchors {
-      width: auto;
-      font-weight: 700;
-      font-size: 26px;
-      padding: 10px 0;
-      padding: 30px 0;
-    }
-    .filter-btn {
-      display: block;
-      font-size: 26px;
-      font-weight: 700;
-    }
-    .shop-anchors-filter {
-      display: flex;
-      margin: 2.5625rem 1.8rem;
-      justify-content: space-between;
-      height: auto;
-    }
-    span.filter-show {
-      font-size: 26px;
-    }
-    button.filter-show-btn {
-      padding: 26px 56px;
-      background: #C4A265;
-      color: #fff;
-      border: 0;
-      border-radius: 5px;
-    }
-    .shop-sorting {
-      font-size: 25px;
-    }
-    .shop-sorting a {
-      color: #c4a26561;
-      font-size: 34px;
-    }
-    .sort-items select {
-      font-size: 33px;
-      border: unset;
-      width: 23.3125rem;
-    }
-    .shop-images img {
-      height: 18.5625rem;
-    }
-    .shop-info-price {
-      font-size: 30px;
-    }
-    .shop-item-name {
-      padding: 19px 0px;
-    }
-    .paginate {
-      font-size: 35px;
-    }
-    .filter-cat {
-      font-size: 29px;
-    }
-    .shop-sub-container2 {
-      width: 100%;
-      /*background: #2a2c2f;*/
-    }
-    .sort-items select option {
-      font-size: 10px;
-    }
-    .shop-filters {
-      padding: 57px;
-      line-height: 73px;
-    }
-    .shop-filters .close-btn{
-      font-size: 69px;
-      float: right;
-    }
-    .title-header {
-      font-size: 26px;
-    }
-    .shop-cart-icon i {
-      margin: 106px 159px;
-      font-size: 48px;
-    }
-    .dropdown-content-account {
-      padding: 9px 16px;
-      z-index: 200;
-    }
-}
-/*# sourceMappingURL=bodystyle.css.map */
-/*@media screen and (max-width: 768px) {
+@media (max-width: 768px) {
   span.close-btn {
     display: block;
   }
@@ -676,7 +575,7 @@ button.addcart {
   .shop-sub-container2 {
     width: 100%;
     /*background: #2a2c2f;*/
-/*  }
+  }
   .sort-items select option {
     font-size: 10px;
   }
@@ -699,5 +598,26 @@ button.addcart {
     padding: 9px 16px;
     z-index: 200;
   }
-}*/
+}
+
+.signup-inputs {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #cf9d71;
+  border-radius: 4px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+input {
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #cf9d71;
+  border-radius: 4px;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
 /*# sourceMappingURL=bodystyle.css.map */
