--- a/public/css/style.css
+++ b/public/css/style.css
@@ -203,7 +203,7 @@ img.logos {
     border: none;
     border-radius: 4px 0px 0px 4px;
     width: 272px;
-    height: 100%;
+    height: 75%;
     font-size: 17px;
     padding: 0px 11px;
 }
@@ -212,14 +212,14 @@ span.inputs {
 }
 
 .headmenu .inputs .btn-search {
-    padding: 22px;
+    padding: 17px;
     margin-left: -8px;
     background-color: #c4a265;
     border: none;
     color: white;
     font-size: 18px;
     border-radius: 0px 4px 4px 0px;
-    height: 100%;
+    height: 75%;
 }
 
 /*.headmenu .icons {
@@ -1354,3 +1354,31 @@ div#myDropdown {
 .proceed-to {
     text-align: right;
 }
+
+
+/* span.inputs {
+    width: 290px;
+    height: 70px;
+    background-color: white;
+    border-radius: 4px;
+    align-items: center;
+    /* padding: 20px; */
+    display: flex;
+} */
+/* button.btn-search {
+    width: 76px;
+    height: 70px;
+
+}
+span .inputs i {
+    font-size: 20px;
+    color: #777;
+
+}  */
+/* span .inputs .btn-search {
+    flex: 1;
+    height: 40px;
+    border: none;
+    outline: none;
+    font-size: 18px;
+} */
