--- a/public/sass/bodystyle.scss
+++ b/public/sass/bodystyle.scss
@@ -679,4 +679,26 @@ input {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
+
+@media only screen 
+and (max-width: 1024px)
+and (min-width: 768px)
+and (orientation: portrait)
+{
+  
+  .login-reg-form {
+    width: 800px;
+    border: solid $value;
+    margin: 0% 37%;
+    background: #2a2c2fc7;
+    border-radius: 5px;
+    position: relative;
+    right: 17%;
+}
+
+
+}
+
+
+
 /*# sourceMappingURL=bodystyle.css.map */
